force-app/main/default/objects/Chat_Summary__c/Chat_Summary__c.object-meta.xml
<CustomObject>
    <description>Stores summaries of customer chat conversations</description>
    <label>Chat Summary</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Summary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chat Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>