force-app/main/default/objects/Chat_Summary__c/fields/Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Sentiment__c</fullName>
    <description>Customer sentiment: positive, neutral, negative</description>
    <label>Sentiment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>