force-app/main/default/objects/Chat_Summary__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <description>Unique session identifier for the conversation</description>
    <externalId>true</externalId>
    <label>Session ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>