force-app/main/default/objects/Chat_Summary__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Summary of the conversation</description>
    <label>Summary</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>