force-app/main/default/objects/Chat_Summary__c/fields/Topics_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Topics_Discussed__c</fullName>
    <description>Semicolon-separated list of topics discussed</description>
    <label>Topics Discussed</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>